syntax = "proto3";

package common;
option go_package = "github.com/mohsenabedy91/polyglot-sentences/proto/common";

message CustomErrorDetail {
  string message = 1;
  map<string, string> attributes = 2;
}